# mybriefcase-bookmarks

./: .gitignore  .htmlvalidate.json  .stylelintrc.json  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  SPEC.md  clippy.toml  deny.toml  eslint.config.js  flake.nix  justfile  package-lock.json  package.json  rust-toolchain.toml
.cargo/: mutants.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  mutation-testing.yml  publish.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: avatar.rs  error.rs  export.rs  history.rs  identity.rs  import.rs  invariants.rs  lib.rs  model.rs  ops.rs  repo.rs  schema.rs  search.rs  watcher.rs
docs/adr/: 0001-mutator-notify-pattern.md  0002-export-failure-is-hard-failure.md
e2e/: fixtures.ts  global-setup.ts  package-lock.json  package.json  playwright.config.ts
e2e/tests/: accessibility.spec.ts  bookmarks.spec.ts  favicon.spec.ts  folders.spec.ts  move.spec.ts  search.spec.ts  settings.spec.ts  sorting.spec.ts  sse-detail.spec.ts  view-mode.spec.ts
schema/: bookmarks.schema.json
src/: api.rs  favicon.rs  handlers.rs  history.rs  lib.rs  main.rs  model.rs  ops.rs  repo.rs  state.rs  views.rs  watcher.rs
static/: app.js  style.css
templates/: add_bookmark.html  base.html  detail_bookmark.html  detail_empty.html  detail_folder.html  edit_bookmark.html  favicon_preview.html  folder_content.html  settings.html  settings_base.html
tests/: api_tests.rs  arch_tests.rs  e2e.rs  merge_tests.rs  poll_tests.rs  prop_tests.rs  repo_tests.rs  schema_tests.rs  title_tests.rs  views_tests.rs
tests/common/: mod.rs
tests/prop_tests/: invariants.rs  merge.rs  roundtrip.rs  strategies.rs  tree_ops.rs
