[workspace]
members = [".", "crates/core"]

[workspace.lints.rust]
unsafe_code = "forbid"
unused_imports = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
# Type-safety restriction lints
fn_params_excessive_bools = "deny"
str_to_string = "deny"
rest_pat_in_fully_bound_structs = "deny"
# Noisy / inapplicable
unused_async = "allow"
module_name_repetitions = "allow"
multiple_crate_versions = "allow"
collapsible_if = "allow"
collapsible_match = "allow"

[package]
name = "mybriefcase-bookmarks"
version = "0.0.1"
edition = "2024"
description = "MyBriefcase Bookmarks — local-first bookmark manager with Automerge CRDT sync over Syncthing"
license = "MIT"
repository = "https://github.com/johnspade/automerge-playground"
readme = "SPEC.md"
keywords = ["mybriefcase", "bookmarks", "automerge", "crdt", "local-first"]
categories = ["web-programming"]
publish = false

[lib]
name = "mybriefcase_bookmarks"
path = "src/lib.rs"

[[bin]]
name = "mybriefcase-bookmarks"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.79"
askama = "0.12"
askama_axum = "0.4"
automerge_repo = { version = "0.3", features = ["tokio"] }
autosurgeon = { version = "0.9", features = ["uuid"] }
axum = { version = "0.8.5", features = ["multipart"] }
axum-embed = "0.1.0"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
infer = "0.19.0"
mybriefcase-bookmarks-core = { path = "crates/core" }
reqwest = { version = "0.12", features = ["json", "stream"] }
rust-embed = { version = "8.11.0", features = ["axum-ex"] }
scraper = "0.22"
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.27", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["catch-panic"] }
url = "2"

[features]
slow-tests = []

[lints]
workspace = true

[dev-dependencies]
automerge = "0.7"
futures-util = "0.3"
http-body-util = "0.1"
proptest = "1.6"
strum = "0.26"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1.18.1", features = ["v4"] }
wiremock = "0.6"
