[package]
name = "mybriefcase-bookmarks-core"
version = "0.0.1"
edition = "2024"
description = "Core domain logic for MyBriefcase Bookmarks"
license = "MIT"
publish = false

[lib]
name = "mybriefcase_bookmarks_core"
path = "src/lib.rs"

[dependencies]
mutants = "0.0.3"
anyhow = "1.0.79"
automerge = "0.7"
automerge_repo = { version = "0.3", features = ["tokio"] }
autosurgeon = { version = "0.9", features = ["uuid"] }
chrono = { version = "0.4", features = ["serde"] }
ego-tree = "0.10"
hostname = "0.4.1"
notify = "6"
schemars = "0.8"
strum = "0.26"
strum_macros = "0.26"
scraper = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.27", features = ["sync"] }
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.27", features = ["macros", "rt"] }

[lints]
workspace = true
